# lolsrv

./: .clang-format  .gitignore  CMakeLists.txt  README.md
enet/: CMakeLists.txt
lib/: argparse.hpp  blowfish.cpp  blowfish.hpp  enetserver.cpp  enetserver.hpp  io.cpp  io.hpp  json.cpp  json.hpp  log.cpp  log.hpp  options.hpp  r3d.hpp  r3d_ops.hpp  span.hpp
lib/r3d/: math.hpp  point2d.hpp  point3d.hpp  r3d.hpp  types.hpp
pkt/: README.md
pkt/quick/: levelup.js  reskin.js  toggle_fow.js
src/: game.cpp  game.hpp  game_replacer.cpp  game_replacer.hpp  main.cpp  main_cb1.cpp  main_cb1.hpp  main_cb3.cpp  main_cb3.hpp  main_cb3_ab.cpp  main_cb3_ab.hpp  main_live084.cpp  main_live084.hpp  main_live106.cpp  main_live126.cpp  main_live126.hpp  main_live131.cpp  main_live131.hpp  main_pbe126.cpp  main_pbe126.hpp  options.cpp  options.hpp  proto.cpp  proto.hpp  proto_base.cpp  proto_base.hpp  proto_json.cpp  proto_json.hpp  proto_pkt.cpp  proto_pkt.hpp
src/0.8.13.26/: main.cpp  pkt.hpp
src/0.9.22.14/: pkt.hpp
src/0.9.22.14_ab/: pkt.hpp
src/0.9.22.16/: main.cpp  pkt.hpp
src/0.9.25.21/: pkt.hpp
src/1.0.0.103/: pkt.hpp
src/1.0.0.104/: pkt.hpp
src/1.0.0.105/: pkt.hpp
src/1.0.0.107/: pkt.hpp
src/1.0.0.109/: pkt.hpp
src/1.0.0.110/: pkt.hpp
src/1.0.0.111/: pkt.hpp
src/1.0.0.113/: pkt.hpp
src/1.0.0.117/: main.cpp  pkt.hpp
src/1.0.0.119/: pkt.hpp
src/1.0.0.124/: pkt.hpp
src/1.0.0.125/: main.cpp  pkt.hpp
src/1.0.0.126/: pkt.hpp
src/1.0.0.126_ab/: pkt.hpp
src/1.0.0.131/: pkt.hpp
src/1.0.0.63/: main.cpp  pkt.hpp
src/1.0.0.74/: pkt.hpp
src/1.0.0.79/: main.cpp  pkt.hpp
src/1.0.0.82/: pkt.hpp
src/1.0.0.86/: pkt.hpp
src/1.0.0.97/: pkt.hpp
src/1.0.0.98/: pkt.hpp
src/proto/: pkt.hpp  proto_0.8.13.26.cpp  proto_0.8.13.26.hpp  proto_0.9.22.14.cpp  proto_0.9.22.14.hpp  proto_0.9.22.14_ab.cpp  proto_0.9.22.14_ab.hpp  proto_0.9.22.16.cpp  proto_0.9.22.16.hpp  proto_0.9.22.18.cpp  proto_0.9.22.18.hpp  proto_0.9.25.21.cpp  proto_0.9.25.21.hpp  proto_0.9.25.24.cpp  proto_0.9.25.24.hpp  proto_0.9.25.36.cpp  proto_0.9.25.36.hpp  proto_1.0.0.100.cpp  proto_1.0.0.100.hpp  proto_1.0.0.101.cpp  proto_1.0.0.101.hpp  proto_1.0.0.102.cpp  proto_1.0.0.102.hpp  proto_1.0.0.103.cpp  proto_1.0.0.103.hpp  proto_1.0.0.104.cpp  proto_1.0.0.104.hpp  proto_1.0.0.105.cpp  proto_1.0.0.105.hpp  proto_1.0.0.106.cpp  proto_1.0.0.106.hpp  proto_1.0.0.107.cpp  proto_1.0.0.107.hpp  proto_1.0.0.108.cpp  proto_1.0.0.108.hpp  proto_1.0.0.109.cpp  proto_1.0.0.109.hpp  proto_1.0.0.110.cpp  proto_1.0.0.110.hpp  proto_1.0.0.111.cpp  (+90 more)
tools/: extract_packet_ids.py
